function(ADD_EXAMPLE NAME)
    add_executable(example_${NAME} ${NAME}.example.cpp)
    target_link_libraries(example_${NAME} PRIVATE idol)
    file(GLOB DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.data.*")
    foreach(FILE ${DATA_FILES})
        add_custom_command(TARGET example_${NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${FILE} $<TARGET_FILE_DIR:example_${NAME}>)
    endforeach()
endfunction()

add_subdirectory(mixed-integer)
add_subdirectory(bilevel)